plugins {
	id 'fabric-loom' version '0.10-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

if(rootProject.file('private.gradle').exists()) { //Publishing details
	apply from: 'private.gradle'
}

archivesBaseName = "artis"
group = "io.github.alloffabric"
version = "${project.mod_version}+${project.minecraft_version}"

repositories {
	mavenCentral()
	maven { url "https://server.bbkr.space/artifactory/libs-release" }
	maven { url "https://cursemaven.com" }
	maven { url "https://jitpack.io" }
	maven { url "https://maven.siphalor.de" }
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.architectury.dev/" }
	maven { url "https://maven.saps.dev/minecraft/" }
	maven { url "https://storage.googleapis.com/devan-maven/" }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	compileOnly "com.google.code.findbugs:jsr305:3.0.2"

	modImplementation("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}") { exclude module: "ModMenu" }

	modApi "io.github.cottonmc:LibGui:${project.libgui_version}"
	modImplementation "de.siphalor:nbtcrafting-1.18:${project.nbtcrafting_version}"
	modImplementation("net.devtech:arrp:0.5.4")

	include "io.github.cottonmc:LibGui:${project.libgui_version}"
	include "io.github.natanfudge:artifice:${project.artifice_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 17
}

java {
	withSourcesJar()
}

jar {
	from "LICENSE"
}

// configure the maven publication
publishing {
	// select the repositories you want to publish to
	repositories {
		// uncomment to publish to the local maven
		// mavenLocal()
	}
}